fix handles overflowing the slider (dynamic height)

--- a/sass/themes/_theme.scss
+++ b/sass/themes/_theme.scss
@@ -42,7 +42,7 @@
 .scale-wrapper {
     .default-wrap {
         box-shadow: 1px 5px 15px $main_color;
-        background: url('../images/slide-bg9.png') $main_color;
+        background: url('../images/slide-bg10.png') $main_color;
         //background-position-y: 1px;
         &:before {
             background: url('../images/slide-bg-bottom.png') no-repeat;
